fixed minor layout issues

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -191,6 +191,7 @@
   right: 57px;
   z-index: 100;
   height: 38px;
+  width: 39px;
 }
 .maximize {
   position: fixed;
@@ -202,6 +203,10 @@
 
 .buttonMargin {
   margin-left: 6px;
+}
+
+.infoButtonMargin {
+  margin-left: 4px;
 }
 
 .colorNewversion {
@@ -433,6 +438,12 @@
   transform: scale(1.9);
   margin-top: 2px;
 }
+.minZoomButton {
+  width: 13px;
+  transform: scale(1.9);
+  margin-top: 2px;
+  margin-left: -1px;
+}
 .startBatchButton {
   width: 13px;
   transform: scale(2.5);
@@ -466,4 +477,10 @@
 }
 .iansNrLockCheckbox {
   margin-left: 4px;
+}
+.winScaleSelector {
+  width: 74px;
+}
+.macScaleSelector {
+  width: 80px;
 }
